plugins {
    alias(libs.plugins.android.application)
}

android {
    namespace = 'com.diploma.aerodent'
    compileSdk 36

    defaultConfig {
        applicationId = "com.diploma.aerodent"
        minSdk = 29
        targetSdk = 36
        versionCode = 1
        versionName = "1.0"

        testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"

        javaCompileOptions {
            annotationProcessorOptions {
                arguments += ["room.schemaLocation": "$projectDir/schemas".toString()]
            }
        }
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }

}

dependencies {
    implementation libs.activity.ktx
    implementation libs.appcompat
    implementation libs.constraintlayout
    implementation libs.material
    testImplementation libs.junit
    androidTestImplementation libs.espresso.core
    androidTestImplementation libs.ext.junit

    def room_version = "2.8.4"
    def glide_version = "4.16.0"

    implementation "androidx.room:room-runtime:$room_version"
    annotationProcessor "androidx.room:room-compiler:$room_version"

    // LiveData & ViewModel for reactive UI
    implementation "androidx.lifecycle:lifecycle-livedata:2.10.0"
    implementation "androidx.lifecycle:lifecycle-viewmodel:2.10.0"

    implementation 'com.google.android.material:material:1.13.0'
    implementation 'com.applandeo:material-calendar-view:1.9.2'

    // Glide for images
    implementation "com.github.bumptech.glide:glide:$glide_version"
    annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"

    // PhotoView for pinch to zoom
    implementation 'com.github.chrisbanes:PhotoView:2.3.0'
}